# Aurum

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.e2e.yml  docker-compose.yml  go.mod  go.sum  index.html  load_test.md  package-lock.json  package.json  prd-cashflow-forecast.md  prd.md  sqlc.yaml
.claude/: AGENTS.md
.claude/commands/: atomic-review.md  balance-review.md  complexity-review.md  ddd-review.md  event-finance-review.md  performance-review.md  secure-design-agent.md  staff.md  testing-review.md
cmd/aurum/: main.go
cmd/migrate/: main.go
features/: contract.feature  contract_steps_test.go  godog_test.go
features/spending/: authorization.feature  godog_test.go  spending_limits.feature  spending_steps_test.go
internal/common/config/: config.go  dotenv.go  postgres.go
internal/common/events/: envelope.go  types.go
internal/common/logging/: logger.go
internal/common/metrics/: metrics.go
internal/common/types/: event.go  ids.go  money.go
internal/common/value_objects/: ids.go  money.go
internal/spending/api/: handler.go  handler_test.go  handlers.go
internal/spending/application/: service.go  service_test.go
migrations/: 000001_init_schemas.down.sql  000001_init_schemas.up.sql  000002_spending_tables.down.sql  000002_spending_tables.up.sql  000003_performance_indexes.down.sql  000003_performance_indexes.up.sql
scripts/: ralph.sh
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
(+40 files in other folders)
