[package]
name = "aurum"
version = "0.1.0"
description = "Aurum local-first forecast workspace"
authors = ["Aurum"]
edition = "2021"

[lib]
name = "aurum_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.2" }

[dependencies]
anyhow = "1.0.95"
chrono = { version = "0.4.39", features = ["clock"] }
rusqlite = { version = "0.32.1", features = ["bundled"] }
serde = { version = "1.0.217", features = ["derive"] }
tauri = { version = "2.2.4" }

[dev-dependencies]
tempfile = "3.15.0"
